--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -654,7 +654,8 @@ span {
     width: 0%;
     height: 100%;
     background-color: rgba(115, 115, 115, 0.3);
-    transition: 1000ms;
+    transition-duration: 1000ms;
+    transition-timing-function: linear;
     z-index: -1;
 }
 
