--- a/extension/css/style.css
+++ b/extension/css/style.css
@@ -164,7 +164,7 @@ span {
 .dislike {
     display: none;
     cursor: pointer;
-    background-image: url(../img/dislike.svg);
+    background-image: url(../img/dislike.png);
     background-repeat: no-repeat, repeat;
     background-position: center;
 }
@@ -173,7 +173,6 @@ span {
     display: flex;
     margin: 4px;
 }
-.toggle {}
 
 .toggle:hover {
     background-color: var(--toggleHover);
@@ -906,10 +905,14 @@ span {
 
 .track-time {
     font-size: 0.85rem;
-    align-self: end;
-    right: 5px;
-    text-align: right;
-    position: absolute;
+}
+
+.like-time {
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 5px;
+    position: relative;
 }
 
 .content-list-menu {
@@ -993,11 +996,11 @@ span {
     cursor: pointer;
     transition: 0.4s;
     font-family: var(--fontFamily);
+    border-radius: 10px;
 }
 
 .item-track:hover {
     background: rgb(128 128 128 / 45%);
-    border-radius: 5px;
 }
 .item-track-content {
     display: flex;
@@ -1006,12 +1009,12 @@ span {
     transition: 0.4s;
 }
 .item-track-content:hover {
-    padding-left: 25px
+    transform: translateX(22.5px);
 }
 .title-list {
     text-align: center;
     font-size: 1.3rem;
-    margin: 5px 4px;
+    padding: 4px;
     font-weight: 500;
 }
 
@@ -1173,29 +1176,20 @@ span {
     border-radius: 10px;
     filter: var(--slider-shadow);
 }
-/* .selected-item .content-item-name {
-    filter: drop-shadow(0px 0px 4px var(--listTrackBackground));
-} */
+
 .list-item-like {
     display: none;
     background-repeat: no-repeat, repeat;
     background-position: top center;
-    min-width: 30px;
-    height: 30px;
-    position: absolute;
-    right: 5px;
-    margin-top: 3px;
+    min-width: 24px;
+    height: 24px;
     background-size: contain;
-    margin-left: auto;
     transition: 0.7s;
     transition-property: opacity;
     filter: drop-shadow(0px 0px 3px rgb(0 0 0 / 70%));
+    margin: auto;
 }
-/* .selected-item:hover [like=false] {
-    display: block;
-    background-image: url(../img/not-liked.png);
 
-} */
 .list-item-liked {
     display: block;
     background-image: url(../img/liked.png);
@@ -1208,7 +1202,7 @@ span {
 
 .list-item-disliked  {
     display: block;
-    background-image: url(../img/disliked.svg);
+    background-image: url(../img/disliked.png);
 }
 
 
@@ -1304,7 +1298,6 @@ label {
 }
 
 .setting-item-hover {
-    cursor: pointer;
     padding: 2px 4px;
     transition: 0.4s;
 }
@@ -1387,6 +1380,7 @@ label {
 
 #DefaultTheme {
     background: linear-gradient(0deg, #FF5555 0%, #ffdd00 100%);
+    color: white;
 }
 #LightTheme {
     background: linear-gradient(0deg, #F2F3F2 0%, #F9F9F8 100%);
@@ -1412,7 +1406,18 @@ label {
 #ShowMore {
     display: block;
     cursor: pointer;
+    background-color: var(--selectedItemColor);
+    border-radius: 8px;
+    padding: 4px;
+    margin: 2px;
+    text-align: center;
+    transition: 0.4s;
 }
+
+#ShowMore:hover {
+    background-color: var(--topButtonColor);
+}
+
 .user-theme-selected {
     outline: 3px solid var(--color);
 }
@@ -1444,6 +1449,7 @@ input::-webkit-inner-spin-button {
 .input-step-content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     margin-top: 4px;
 }
 .span-px {
@@ -1744,6 +1750,13 @@ input::-webkit-inner-spin-button {
     border-radius: 5px;
     margin: 4px;
     font-weight: 400;
+}
+
+.disable-setting-item {
+    filter: grayscale(1) opacity(0.5);
+    pointer-events: none;
+    background: gray;
+    border-radius: 10px;
 }
 
 .shortcut-key {
